--- a/frontend-elevator-doors/src/styles/global.css
+++ b/frontend-elevator-doors/src/styles/global.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    background-color: #e6f0ff;
+    padding: 20px;
+    background-color: #010f23;
     color: #0a102f;
     font-family: Arial, Helvetica, sans-serif;
 }
