--- a/frontend-elevator-doors/src/styles/Elevator.css
+++ b/frontend-elevator-doors/src/styles/Elevator.css
@@ -1,22 +1,23 @@
 .elevator-shaft {
     position: relative;
-    height: 400px;
-    width: 120px;
+    height: 480px;
+    width: 62px;
     border: 2px solid #1e3a5f;
     background: repeating-linear-gradient(
         to top,
         #0a1a2f,
-        #0a1a2f 50px,
-        #122f52 50px,
-        #122f52 52px
+        #0a1a2f 60px,
+        #122f52 60px,
+        #122f52 61px
     );
 }
 
-.elevator-box {
+.elevator-box { 
     position: absolute;
-    width: 100%;
-    height: 70px;
-    background: #e6f0ff;
+    width: 60px;
+    height: 60px;
+    background: #1e4a7a;
+    border: 1px solid #e6f0ff;
     transition: bottom 1.2s ease-in-out;
 }
 
